@@ -6,8 +6,9 @@
  * http://www.eclipse.org/legal/epl-v10.html
  *
  * Contributors:
- *     IBM Corporation - initial API and implementation
- *     Broadcom Corporation - ongoing development
+ * - original code copied from org.eclipse.core.internal.resources.ComputeProjectOrder
+ * 	 available under the terms of the Eclipse Public License 2.0
+ * 	 Copyright (c) 2000, 2011 IBM Corporation and others.
  *******************************************************************************/
 package org.eclipse.n4js.ui.external;
 
@@ -362,8 +363,8 @@ class ComputeProjectOrder {
 			final int NEXT_ADJACENT = 3;
 			final int AFTER_NEXTED_DFS_VISIT = 4;
 			// use precomputed objects to avoid garbage
-			final Integer NEXT_VERTEX_OBJECT = new Integer(NEXT_VERTEX);
-			final Integer AFTER_NEXTED_DFS_VISIT_OBJECT = new Integer(AFTER_NEXTED_DFS_VISIT);
+			final Integer NEXT_VERTEX_OBJECT = Integer.valueOf(NEXT_VERTEX);
+			final Integer AFTER_NEXTED_DFS_VISIT_OBJECT = Integer.valueOf(AFTER_NEXTED_DFS_VISIT);
 			// initialize
 			// all vertex.color initially Vertex.WHITE;
 			// all vertex.predecessor initially null;
