@@ -63,18 +63,16 @@ import org.eclipse.n4js.hlc.base.testing.HeadlessTester;
 import org.eclipse.n4js.internal.FileBasedWorkspace;
 import org.eclipse.n4js.internal.N4JSProject;
 import org.eclipse.n4js.projectModel.IN4JSProject;
-import org.eclipse.n4js.runner.SystemLoaderInfo;
 import org.eclipse.n4js.smith.CollectedDataAccess;
 import org.eclipse.n4js.smith.DataCollectorCSVExporter;
 import org.eclipse.n4js.smith.Measurement;
-import org.eclipse.n4js.tester.CliTestTreeTransformer;
+import org.eclipse.n4js.smith.N4JSDataCollectors;
 import org.eclipse.n4js.tester.TestCatalogSupplier;
-import org.eclipse.n4js.tester.TestTreeTransformer;
 import org.eclipse.n4js.tester.TesterModule;
 import org.eclipse.n4js.tester.extension.TesterRegistry;
 import org.eclipse.n4js.tester.internal.TesterActivator;
-import org.eclipse.n4js.utils.N4JSDataCollectors;
 import org.eclipse.n4js.utils.NodeModulesDiscoveryHelper;
+import org.eclipse.n4js.utils.StatusUtils;
 import org.eclipse.xtext.ISetup;
 import org.kohsuke.args4j.Argument;
 import org.kohsuke.args4j.CmdLineException;
@@ -181,11 +179,6 @@ public class N4jscBase implements IApplication {
 
 	@Option(name = "--runWith", aliases = "-rw", metaVar = "runnerId", usage = "ID of runner to use, last segment is sufficient, e.g. nodejs.")
 	String runner = "nodejs";
-
-	@Option(name = "--systemLoader", aliases = "-sl", required = false, usage = "when specified the given javascript system loader will be used "
-			+ "for running the module. If not specified, the by default the System.js loader will be used. The following system "
-			+ "loaders are available: sjs and cjs where sjs stands for System.js and cjs stands for Common JS.")
-	String systemLoader;
 
 	@Option(name = "--nodejsLocation", required = false, usage = "when configured then the Node.js binary located under the given absolute path "
 			+ "will be used for executing modules. When specified then the absolute path of the folder that contains the Node.js binary should be "
@@ -317,7 +310,7 @@ public class N4jscBase implements IApplication {
 		}
 		System.out.flush();
 		System.err.flush();
-		return new Integer(exitCode);
+		return Integer.valueOf(exitCode);
 	}
 
 	@Override
@@ -518,11 +511,6 @@ public class N4jscBase implements IApplication {
 				throw new ExitCodeException(EXITCODE_WRONG_CMDLINE_OPTIONS);
 			}
 
-			final SystemLoaderInfo systemLoaderType = SystemLoaderInfo.fromString(systemLoader);
-			if (null == systemLoaderType) {
-				systemLoader = SystemLoaderInfo.SYSTEM_JS.getId();
-			}
-
 			if (null != nodeJsBinaryRoot) {
 				binariesPreferenceStore.setPath(nodeJsBinaryProvider.get(), nodeJsBinaryRoot.toURI());
 				binariesPreferenceStore.save();
@@ -566,7 +554,7 @@ public class N4jscBase implements IApplication {
 								warn(status.getMessage());
 							else
 								throw new ExitCodeException(EXITCODE_DEPENDENCY_NOT_FOUND,
-										"Cannot install dependencies.");
+										"Cannot install dependencies: " + StatusUtils.getErrorMessage(status, false));
 					}
 				}
 
@@ -730,8 +718,6 @@ public class N4jscBase implements IApplication {
 
 			// override with customized bindings
 			final Module overridenModule = Modules.override(combinedModule).with(binder -> {
-				binder.bind(TestTreeTransformer.class)
-						.to(CliTestTreeTransformer.class);
 				binder.bind(IHeadlessLogger.class)
 						.toInstance(new ConfigurableHeadlessLogger(N4jscBase.this.verbose, N4jscBase.this.debug));
 			});
@@ -894,7 +880,7 @@ public class N4jscBase implements IApplication {
 	/** writes test catalog based on {@link #testCatalogFile} */
 	private void writeTestCatalog() throws ExitCodeException {
 		if (null != testCatalogFile) {
-			final String catalog = testCatalogSupplier.get();
+			final String catalog = testCatalogSupplier.get(true); // do not include "endpoint" property here
 			try (final FileOutputStream fos = new FileOutputStream(testCatalogFile)) {
 				fos.write(catalog.getBytes());
 				fos.flush();
@@ -929,7 +915,7 @@ public class N4jscBase implements IApplication {
 				for (Path nmFolder : modulesFolders) {
 					additionalPaths.add(nmFolder.toString());
 				}
-				headlessRunner.startRunner(runner, implementationId, systemLoader, checkFileToRun(), additionalPaths);
+				headlessRunner.startRunner(runner, implementationId, checkFileToRun(), additionalPaths);
 			}
 		}
 	}
